--- a/testH5location.html
+++ b/testH5location.html
@@ -23,7 +23,10 @@
     <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 
     <script>
-      var vConsole = new VConsole();
+    window.onload = function () {
+        var vConsole = new VConsole();
+
+      };
       function getLocationByFeishu() {
         window.h5sdk.ready(function() {
             window.h5sdk &&
