--- a/openSchema.html
+++ b/openSchema.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Cache-control" content="no-cache" />
     <meta http-equiv="Cache" content="no-cache" />
     <link rel="icon" href="favicon.ico" />
-    <title>【测试】定位</title>
+    <title>【测试】跳转第三方</title>
   </head>
   <body>
 <a href="weixin://">weixin</a>
