--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -16,6 +16,6 @@
   </head>
   <body>
 <a href="weixin://">weixin</a>
-    <a href="awemesso://">抖音</a>
+    <a href="mqq://">QQ</a>
   </body>
 </html>
