--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -17,5 +17,7 @@
   <body>
 <a href="weixin://">weixin</a>
     <a href="mqq://">QQ</a>
+    <a href="com.ss.android.ugc.aweme://com.ss.android.ugc.aweme.splash.SplashActivity">抖音</a>
+    <a href=" com.smile.gifmaker://com.yxcorp.gifshow.HomeActivity">快手</a>
   </body>
 </html>
