--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -16,7 +16,7 @@
   </head>
   <body>
 <a href="weixin://">weixin</a>
-    <a href="mqq://">QQ</a>
+    <a href="mqqapi://">QQ</a>
     <a href="com.ss.android.ugc.aweme://com.ss.android.ugc.aweme.splash.SplashActivity">抖音</a>
     <a href=" com.smile.gifmaker://com.yxcorp.gifshow.HomeActivity">快手</a>
   </body>
