--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -19,5 +19,6 @@
     <a href="mqq://">QQ</a>
     <a href="com.ss.android.ugc.aweme://com.ss.android.ugc.aweme.splash.SplashActivity">抖音</a>
     <a href=" com.smile.gifmaker://com.yxcorp.gifshow.HomeActivity">快手</a>
+    <a href="taobao://">淘宝</a>
   </body>
 </html>
