--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -17,8 +17,8 @@
   <body>
 <a href="weixin://">weixin</a>
     <a href="mqq://">QQ</a>
-    <a href="com.ss.android.ugc.aweme://com.ss.android.ugc.aweme.splash.SplashActivity">抖音</a>
-    <a href=" com.smile.gifmaker://com.yxcorp.gifshow.HomeActivity">快手</a>
+    <a href="snssdk1128://aweme/detail/6534452667488406792?refer=web">抖音</a>
+    <a href="com.smile.gifmaker://com.yxcorp.gifshow.HomeActivity">快手</a>
     <a href="taobao://">淘宝</a>
   </body>
 </html>
