--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -17,6 +17,6 @@
   <body>
     <a href="weixin://">weixin</a>
     <a href="mqq://">QQ</a>
-    <a href="snssdk1128://aweme/detail/6534452667488406792?refer=web">抖音</a>
+    <a href="snssdk1128://aweme/detail/">抖音</a>
   </body>
 </html>
