--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -16,11 +16,17 @@
   </head>
   <body>
     <a href="weixin://">微信主界面</a>
+    <br/>
     <a href="snssdk1128://aweme/detail/6875142627910634759?refer=web">抖音作品详情界面</a>
+    <br/>
     <a href="snssdk1128://discovery">抖音发现页</a>
+    <br/>
     <a href="snssdk1128://notification">抖音消息页</a> 
+    <br/>
     <a href="snssdk1128://mine">抖音我的页面</a>
-    <a href="snssdk1128://user/profile/1017971638?refer=web&type=1">抖音他人的界面，refer来源 type</a>
+    <br/>
+    <a href="snssdk1128://user/profile/1017971638?refer=web">抖音他人的界面</a>
+    <br/>
     <a href="snssdk1128://music/detail/6673739794394139406?refer=web">抖音音乐详情页面，id音乐id</a>
   </body>
 </html>
