--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -30,5 +30,7 @@
     <a href="snssdk1128://music/detail/6673739794394139406?refer=web">抖音音乐详情页面</a>
     <br/>
     <a href="snssdk1128://live?room_id=6875894874697763592&user_id=77565542123&from=webview&refer=web">抖音直播详情界面</a>
+    <br/>
+    <a href="https://iama1536.github.io/testZDL/testOpenSchema.html">抖音直播详情界面</a>
   </body>
 </html>
