--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -31,6 +31,6 @@
     <br/>
     <a href="snssdk1128://live?room_id=6875894874697763592&user_id=77565542123&from=webview&refer=web">抖音直播详情界面</a>
     <br/>
-    <a href="https://iama1536.github.io/testZDL/testOpenSchema.html">抖音直播详情界面</a>
+    <a href="https://iama1536.github.io/testZDL/testlocation.html">抖音直播详情界面</a>
   </body>
 </html>
