--- a/testlocation.html
+++ b/testlocation.html
@@ -21,10 +21,10 @@
 
     <script>
         window.h5sdk.config({
-            appId: 'cli_9e1c0cbc86f1900d',
+            appId: 'cli_9fe1dee7e5f3d00d',
             timestamp: 1603277445078,
             nonceStr: 'imatest',
-            signature: '1f783ce36c90b961bd40d7591cda8c0fc71e9307',
+            signature: '6639c74f931c6226e26175c452e1921505c5fdd0',
             jsApiList: ['tt.getLocation']
         });
 
