--- a/testOpenSchema.html
+++ b/testOpenSchema.html
@@ -32,5 +32,7 @@
     <a href="snssdk1128://live?room_id=6875894874697763592&user_id=77565542123&from=webview&refer=web">抖音直播详情界面</a>
     <br/>
     <a href="https://iama1536.github.io/testZDL/testlocation.html">抖音直播详情界面</a>
+    <br/>
+    <a href="https:///www.baidu.com" target="_self">百度TargetTest</a>
   </body>
 </html>
