--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -29,7 +29,7 @@
 
       console.log('自定义右侧导航');
       window.h5sdk.ready(function () {
-        var string = "data:image/png;base64,iVBORw0KGgoAAA" +
+        var string = "iVBORw0KGgoAAA" +
           "ANSUhEUgAAAEAAAABACAIAAAAlC+aJAAAAAXN" +
           "SR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAJcEhZcwAADsMAAA7DAcd" +
           "vqGQAACFxSURBVGhDhXpnc2Tnld59b04dgUYOA2AGA0wCMQGkGEQvLYqmvFrZUnlXqxVJlWxVrbfsWrtqa/3BH/0T/MUfvFVrS1q" +
