--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -129,7 +129,7 @@
 
 
         console.log('清空右导航');
-        window.h5sdk.biz.navigation.setRight({ show: false });
+        window.h5sdk.biz.navigation.setRight({ show: true });
 
     })
   }
