--- a/testSetMenu.html
+++ b/testSetMenu.html
@@ -108,6 +108,7 @@
           text: 'test',
           isShowIcon: false,
           onSuccess: function (result) {
+            console.log('测试左导航成功回调');
             console.log(result);
           }
         });
