--- a/testlocation.html
+++ b/testlocation.html
@@ -5,6 +5,7 @@
     <title>index</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <script type="text/javascript" src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"></script>
     <script src="https://cdn.bootcss.com/vConsole/3.2.0/vconsole.min.js"></script>
     <script src="https://lib.sinaapp.com/js/jquery/2.0.2/jquery-2.0.2.min.js"></script>
@@ -26,7 +27,7 @@
 
         function review() {
             send_obj =  {app_id: "cli_9e929591d0b55101",app_secret:"96AVHS8SJrKMPFWOp6DXueWNECL6Msj5",url:"https://iama1536.github.io/testZDL/testlocation.html"}
-            send_obj = JSON.stringfy(send_obj);
+            send_obj = JSON.stringify(send_obj);
             $.post("http://122.112.163.203/getConfig", send_obj, function(result){
                 console.log(result)
                 dataJson = result.res
