--- a/testlocation.html
+++ b/testlocation.html
@@ -28,7 +28,7 @@
         function review() {
             send_obj =  {app_id: "cli_9e929591d0b55101",app_secret:"96AVHS8SJrKMPFWOp6DXueWNECL6Msj5",url:"https://iama1536.github.io/testZDL/testlocation.html"}
             send_obj = JSON.stringify(send_obj);
-            $.post("http://122.112.163.203/getConfig", send_obj, function(result){
+            $.post("https://qcqes5.fn.thelarkcloud.com/H5config", send_obj, function(result){
                 console.log(result)
                 dataJson = result.res
                 appId = dataJson.appId
