--- a/testlocation.html
+++ b/testlocation.html
@@ -25,7 +25,7 @@
 
 
         function review() {
-            send_obj = { app_id: "cli_9e929591d0b55101", app_secret: "96AVHS8SJrKMPFWOp6DXueWNECL6Msj5", url: "http://10.91.42.9/index" }
+            send_obj = { app_id: "cli_9e929591d0b55101", app_secret: "96AVHS8SJrKMPFWOp6DXueWNECL6Msj5", url: "https://iama1536.github.io/testZDL/testlocation.html" }
             send_obj = JSON.stringify(send_obj);
             $.ajax({
                 headers: {
