--- a/testlocation.html
+++ b/testlocation.html
@@ -32,7 +32,7 @@
                     "Content-Type": "application/json; charset=utf-8"
                 },
                 type: "POST",
-                url: "https://af4d6w.fn.thelarkcloud.com/H5config",
+                url: "https://cloudapi.bytedance.net/faas/services/ttcunw/invoke/H5config",
                 data: send_obj,
                 success: function (result) {
                     console.log(result)
