--- a/testTargetWebView.html
+++ b/testTargetWebView.html
@@ -64,7 +64,11 @@
 
     navigateNew = () => {
       // location.href = "https://www.tmall.com/"
-      window.open("https://www.tmall.com/", '_self')
+      window.h5sdk.biz.util.openLink({
+    url: "https://open.feishu.cn",
+    title: "Open platform",
+    newTab: false
+});
     }
   </script>
 </body>
