--- a/testTargetWebView.html
+++ b/testTargetWebView.html
@@ -37,17 +37,14 @@
       <button onclick="navigateNew()">跳转</button>
     </div>
   </div>
-      <script
-      type="text/javascript"
-      src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"
-    ></script>
-    <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
+  <script type="text/javascript" src="https://s3.bytecdn.cn/ee/lark/js_sdk/h5-js-sdk-1.4.8.js"></script>
+  <script src="https://cdn.bootcss.com/vConsole/3.3.4/vconsole.min.js"></script>
 
   <script>
-      window.onload = function () {
-        var vConsole = new VConsole();
+    window.onload = function () {
+      var vConsole = new VConsole();
 
-      };
+    };
     // document.addEventListener('click', (e) => {
     //   var node = e.target
     //   while ('BODY' !== node.nodeName) {
@@ -72,21 +69,20 @@
     }
 
     navigateNew = () => {
-      // location.href = "https://www.tmall.com/"
-      window.h5sdk.ready(() => {
-tt.openSchema({
+        // location.href = "https://www.tmall.com/"
+        window.h5sdk.ready(() => {
+          tt.openSchema({
             schema: 'https://www.apple.com',
             external: false,
-            success (res) {
-                console.log(`${res}`);
+            success(res) {
+              console.log(`${res}`);
             },
-            fail (res) {
-                console.log(`open fail`);
+            fail(res) {
+              console.log(`open fail`);
             }
-        });
+          });
+        })
       }
-                         })
-    }
   </script>
 </body>
 
