--- a/testTargetWebView.html
+++ b/testTargetWebView.html
@@ -73,7 +73,7 @@
         window.h5sdk.ready(() => {
           tt.openSchema({
             schema: 'https://www.apple.com',
-            external: false,
+            external: true,
             success(res) {
               console.log(`${res}`);
             },
