--- a/testlocation.html
+++ b/testlocation.html
@@ -81,7 +81,7 @@
                 setTimeout(() => {
                     tt.openSchema({
                         schema: 'https://www.apple.com',
-                        external: false,
+                        external: true,
                         success(res) {
                             console.log(`${res}`);
                         },
