--- a/testlocation.html
+++ b/testlocation.html
@@ -27,7 +27,7 @@
             send_obj = {
                 app_id: "cli_9f35e5830735500d",
                 app_secret: "KqAlGgHTeBUwUg50SX2WRe0bI44rs4WH",
-                url: "https://iama1536.github.io/testZDL/testlocation.html#/123"
+                url: "https://iama1536.github.io/testZDL/testlocation.html"
             }
             send_obj = JSON.stringify(send_obj);
             $.ajax({
